2016-08-21  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
    gputils 1.5.0 released.

2016-08-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, gpasm/directive.c, gpasm/gpasm.c, gpasm/gpasm.h,
    gpasm/processor.c, libgputils/gpcoff.h:
    Fixed an assume bug.
    New built-in variable: __ASSUMED_BANK_ADDR

2016-08-12  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * config.h.in, configure, configure.ac, include/stdhdr.h,
    libgputils/gparchive.c, libgputils/gpsystem.c:
    Fixed the print format warnings.

2016-08-12  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * include/stdhdr.h, libgputils/gparchive.c, libgputils/gpsystem.c:
    Fixed some compiler warnings.

2016-08-11  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * configure, configure.ac:
    Fixed a Darwin bug.

2016-08-10  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/gpasm.c,
    gpasm/testsuite/test-regression,
    gpasm/testsuite/regression/source/assume.asm:
    Fixed the assume bug.

  * gputils/dump.c:
    bugfix

2016-08-08  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * config.h.in, include/stdhdr.h, configure, configure.ac,
    gpasm/directive.c, gpasm/evaluate.c, gpasm/gpasm.h.in,
    gpasm/lst.c, gpasm/parse.y, gpasm/processor.c, gputils/gpvo.c,
    libgputils/gpdis.c, libgputils/gpprocessor.c,
    libgputils/gpprocessor.h, libgputils/gptypes.h,
    libgputils/gpwritehex.c:
    The default compiler changed from gcc to clang. I corrected
    several warnings which are not indicated the gcc:
    "#290 1.5.0_RC2 clang warnings (format, ..." and other warnings.
    Thanks to ilovezfs for the report.

  * gpasm/util.c, gputils/block.c, gputils/dump.c,
    libgputils/gpcoffgen.c:
    Fixed some hidden error. (The gcc 5.6.1 has not given mark.)

  * include/libiberty.h:
    Code formatting.

2016-08-07  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * libgputils/gpcoffgen.c: