@@ -77,6 +77,7 @@ extern struct gplink_state {
   int              num_paths;           /* Number of paths in the list. */
   pic_processor_t  processor;
   proc_class_t     class;
+  int              strict_level;        /* 0, 1 */
 
   struct {
     int          level;
