@@ -1,3 +1,9 @@
+2016-09-12  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
+  * doc/gputils.lyx, gplink/gplink.c, gplink/gplink.h.in,
+    man/gplink.1.in:
+    Fixed this bug: "#292 usb registers missing for ..."
+    Thanks to Fred for the report.
+
 2016-08-21  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
     gputils 1.5.0 released.
 
